# zabbix-history-kafka

./: CMakeLists.txt  README.md
conf/: libzbxrdkafka.conf
src/: config.c  config.h  libzbxrdkafka.c  libzbxrdkafka.h  producer.c  producer.h  test.h
